# research-assistant

./: .gitignore  CLAUDE.md  MIGRATION.md  README.md  pyproject.toml
src/research_assistant/: cli.py  config.py  contracts.py  db.py  insight_embedder.py  kb_reader.py  llm.py  schemas.py
src/research_assistant/extractors/: youtube.py
src/research_assistant/prompts/: distill.txt  orient.txt  translate.txt
src/research_assistant/stages/: distill.py  ingest.py  migrate.py  orient.py  retrieve.py  translate.py
tests/: test_contracts.py  test_db.py  test_distill.py  test_distill_batch.py  test_ingest.py  test_insight_embedder.py  test_integration.py  test_kb_reader.py  test_llm.py  test_migrate.py  test_orient.py  test_retrieve.py  test_schemas.py  test_translate.py  test_translate_corpus.py  test_youtube.py
